@@ -32,7 +32,7 @@
     </tr>
 </table>
 
-<h3>BEAM Version 4.10.3</h3>
+<h3>BEAM Version 4.10.4</h3>
 
 
 <h4>Overview</h4>
@@ -48,7 +48,8 @@
     <li><b>VISAT</b> - An intuitive desktop application used for EO data visualisation, analysing and processing.</li>
     <li>A set of scientific data processors running either from the command-line or invoked by VISAT.</li>
     <li>The command-line tool <b>gpt</b> (graph processing tool) is used to execute
-        processing graphs made up of <i>operators</i> nodes developed using the BEAM GPF (see Java API below).</li>
+        processing graphs made up of <i>operators</i> nodes developed using the BEAM GPF (see Java API below).
+    </li>
     <li>A data product converter tool <b>pconvert</b> allowing a user to convert raw data products to the
         <a href="BeamDimapFormat.html">BEAM-DIMAP</a> standard format,
         to <a href="../geotiff/ExportGeoTIFF.html">GeoTIFF</a>,
@@ -58,7 +59,7 @@
     <li>A <b>Java&#153; API</b> which provides ready-to-use components for remote sensing related application
         development and plug-in points for new BEAM extension modules. Besides a number of extension points such as
         product reader and writers, the BEAM API comprises the <b>Graph Processing Framework</b> (GPF) which is
-        used to rapidly create raster data processors. The  <b>VISAT Rich Client Platform</b>
+        used to rapidly create raster data processors. The <b>VISAT Rich Client Platform</b>
         is used to develop rich GUI user interface applications based on BEAM VISAT.
     </li>
 </ul>
@@ -66,7 +67,8 @@
 <h4>Supported Product Formats</h4>
 
 <p>This following table lists the data product formats which are supported
-    using the reader modules provided in the <i>BEAM standard installation</i>. Other readers are provided as plug-ins or
+    using the reader modules provided in the <i>BEAM standard installation</i>. Other readers are provided as plug-ins
+    or
     by dedicated BEAM add-on toolboxes such as the GlobToolbox, and the SMOS-Box. A variety of data products may also be
     imported by the standard <b>NetCDF</b> and <b>GeoTIFF</b> readers.
     Information about access to the products supported by the standard installation
