@@ -33,21 +33,33 @@
     </tr>
 </table>
 
-<h3>BEAM Version 4.10.3</h3>
+<h3>BEAM Version 4.10.4</h3>
 
 <p>Besides many bug fixes, these are the most important features and enhancements introduced in BEAM 4.10.x:</p>
 
 <ul>
     <li>Enhanced support for vector data import (such as MERMAID Extraction files,
-        see <a href="../visat/ImportMermaid.html">here</a>)</li>
-    <li>Image views may be synchronised via geographical center coordinates (see <a href="../visat/NavigationWindow.html">here</a>)</li>
-    <li>Completely revised profile plot; added support for correlative data (see <a href="../visat/ProfilePlotDialog.html">here</a>)</li>
-    <li>Completely revised histogram; added support for logarithmic histogram and logiarithmic x-axis (see <a href="../visat/HistogramDialog.html">here</a>)</li>
+        see <a href="../visat/ImportMermaid.html">here</a>)
+    </li>
+    <li>Image views may be synchronised via geographical center coordinates (see <a
+            href="../visat/NavigationWindow.html">here</a>)
+    </li>
+    <li>Completely revised profile plot; added support for correlative data (see <a
+            href="../visat/ProfilePlotDialog.html">here</a>)
+    </li>
+    <li>Completely revised histogram; added support for logarithmic histogram and logiarithmic x-axis (see <a
+            href="../visat/HistogramDialog.html">here</a>)
+    </li>
     <li>Completely revised look and feel of scatter plot (see <a href="../visat/DensityPlotDialog.html">here</a>)</li>
-    <li>Completely revised look and feel of statistics toolview (see <a href="../visat/StatisticsDialog.html">here</a>)</li>
+    <li>Completely revised look and feel of statistics toolview (see <a href="../visat/StatisticsDialog.html">here</a>)
+    </li>
     <li>Created completely new correlative plot (see <a href="../visat/CorrelativePlotDialog.html">here</a>)</li>
-    <li>Added support for import of correlative data, such as <a href="../visat/ImportSeaDASTrack.html">SeaDAS-6.x ship tracks</a>, <a href="../visat/ImportCSV.html">generic CSV</a> or <a href="../visat/ImportMermaid.html">MERMAID data</a></li>
-    <li>Added support for logarithmic x-axis in colour manipulation tool view (see <a href="../visat/ColorManipulationWindow.html">here</a>)</li>
+    <li>Added support for import of correlative data, such as <a href="../visat/ImportSeaDASTrack.html">SeaDAS-6.x ship
+        tracks</a>, <a href="../visat/ImportCSV.html">generic CSV</a> or <a href="../visat/ImportMermaid.html">MERMAID
+        data</a></li>
+    <li>Added support for logarithmic x-axis in colour manipulation tool view (see <a
+            href="../visat/ColorManipulationWindow.html">here</a>)
+    </li>
 </ul>
 
 <h5>BEAM Version 4.9</h5>
